# GSP

./: CMakeLists.txt  FA_CL_v0.3.cpp  GSEXP.cpp  PFA-0.6.cpp  PFA-0.99  PFA-0.99.cpp  PFA-betav0.2.cpp  PFA_Betav0.4.cpp  README.md  ann_data.h  input_param.h  main_analysis_module.h  pop_data.h  thread_analysis_module.h  utilities.h  var_list.h
Toy data/: Postprocessing.cpp
Toy_data/: Postprocessing  Toy_fixed_ref.txt  Toy_fixed_ref_filtered_300.txt  Toy_ml_ref.txt  Toy_ml_ref_filtered_300.txt
nextflow/Start_from_fastq/: main.nf
nextflow/Start_from_vcf/: main.nf.txt
src/: PFA-0.99  PFA-0.99.cpp  input_param.h  pop_data.h  thread_analysis_module.h  utilities.h  var_list.h
test/: Toy_driver_script.sh  Toy_pop_label.txt
utilities/: Get_signature_clusters.cpp  Get_trimming_parameter_len.cpp  Get_trimming_parameter_qual.cpp  Plot_signature_clusters.py
utilities/py_scripts/: Plot_signature_clusters.py
